# become-a-head-chef

./: .gitignore  README.md
backend/: Makefile  pyproject.toml
backend/airflow_files/: airflow.cfg
backend/airflow_files/dags/: recipes_dag.py
backend/app/: main.py
backend/app/database/: database.py  recipes.json  scraping.py
backend/app/routers/: recipes.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  index.tsx
frontend/src/components/: RecipeInterfaces.tsx  index.tsx
frontend/src/components/CustomDataView/: CustomDataView.styles.css  CustomDataView.tsx
frontend/src/components/Footer/: Footer.styles.css  Footer.tsx
frontend/src/components/Navbar/: Navbar.styles.css  Navbar.tsx
frontend/src/components/Recipe/: Recipe.styles.css  Recipe.tsx
frontend/src/pages/: About.tsx  History.tsx  Home.tsx
